  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)

features:
- allow output of lower bounds for visualization
- add number of conflict constraints found by diving heuristics to statistics
- added symmetry detection for linking constraints

new parameters:
- new parameter "visual/displb" that enables output of lower bounds for visualization

deleted and modified parameters:
- rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"

new parameters:
- new parameter: "presolving/symmetry/displaynorbitvars" (whether we display the number of affected variables in the statistics)

fixed bugs:
- fixed wrong cast in LP iteration limit computation in proximity search heuristic
- fixed check for time limit in heur_nlpdiving
- fixed LP status to unsolved when marking LP to be resolved if objective limit has changed
- improved numerics and fixed stop criterion in zirounding heuristic
- fixed treatment of variable aggregations in knapsack constraint handler that led to wrong propagations
- fixed LPI status after changing objective in lpi_cpx, lpi_grb, lpi_xprs, lpi_msk
- fixed and unified asserts in LPIs
- retrieve interior solution instead of (possibly non-existing) basic solution from mosek after using
  barrier without crossover in lpi_msk
- copy parameter settings to sub-SCIPs in SCIPcopyLargeNeighborhoodSearch() also when copying only LP rows
- fixed a check for fixed variables in Binpacking example
- generate deprecation warnings when using SCIPaddCut
- fix bug in sepa_gomory if cut is a bound change
- fixed bug with NULL pointer handling in LPIs

unit tests:
- expanded unit tests of the lpis
- added check to unit tests that problem is not solved after every change


SCIP version 5.0.0
==================

features:
- add new heuristic MPEC that solves a MPEC reformulation of a mixed-binary nonlinear problem by regularized NLP reformulations