@@ -119,6 +119,7 @@
  * @subsection CHG Changes between different versions of SCIP
  * - \ref CHANGELOG    "Change log"
  * - \ref RELEASENOTES "Release notes"
+ * - \ref CHG11        "Interface changes between version 5.0 and 5.1"
  * - \ref CHG10        "Interface changes between version 4.0 and 5.0"
  * - \ref CHG9         "Interface changes between version 3.2 and 4.0"
  * - \ref CHG8         "Interface changes between version 3.1 and 3.2"
@@ -7429,6 +7430,28 @@
   * - changed and removed several parameters for zerohalf separator
   * - moved parameters for flowcover and cmir separators to "separating/aggregation"
   *
+  *
+  * <br>
+  * For further information we refer to the \ref RELEASENOTES "Release notes" and the \ref CHANGELOG "Changelog".
+  */
+
+ /*--+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8----+----9----+----0----+----1----+----2*/
+/**@page CHG11 Interface changes between SCIP 5.0 and SCIP 5.1
+  *
+  *
+  * @section CHGCALLBACKS11 New and changed callbacks
+  *
+  *
+  * <br>
+  * @section CHGINTERFUNC11 Changed interface methods
+  *
+  * <br>
+  *   <b>SCIP Status</b>
+  *   - new SCIP_STATUS code "SCIP_STATUS_TERMINATE" and methods SCIPtryTerminate() and
+  *     SCIPterminated() in scip/interrupt.h for handling of SIGTERM signals.
+  *
+  * <br>
+  * @section CHGPARAMS11 Changed parameters
   *
   * <br>
   * For further information we refer to the \ref RELEASENOTES "Release notes" and the \ref CHANGELOG "Changelog".
